# SpaceAiCup

./: .gitignore  .gitmodules  LICENSE  README.md
subleqasm/: CMakeLists.txt  a.asm  main.cpp  subleqasm.sln  subleqasm.vcxproj
subleqasm/subleqasm.xcodeproj/: project.pbxproj
subleqasm/subleqasm.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  Release.xcscheme
vm/: CMakeLists.txt  main.cpp  vm.sln  vm.vcxproj
vm/vm.xcodeproj/: project.pbxproj
vm/vm.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  Release.xcscheme
